fixed some spacing and added moar borders

--- a/style.css
+++ b/style.css
@@ -175,11 +175,12 @@ div #tri img {
         padding-top: .7rem;
     }
     .careerWorks img{
-        padding-left: 1.8rem;
-        padding-bottom: 1rem;
         height: 75%;
         width: 75%;
-    
+        border: .1rem solid white;
+        align-content:center;
+        margin-left: 2rem;
+        margin-top: 2rem;
     }
     
     .careerHomes{
